# markdown-util

./: .gitignore  .url2mdrc  LICENSE  README.md  pyproject.toml  setup.py
requirements/: base.txt  dev.txt  prod.txt
src/url2md/: __init__.py  __main__.py  cli.py  core.py
src/url2md/handlers/: __init__.py  base_handler.py  html_handler.py
src/url2md/utils/: __init__.py  domain.py  formatter.py  html_splitter.py  logger.py  markdown_splitter.py  sanitizer.py  table_formatter.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_cli.py  test_core.py  test_domain.py  test_html_handler.py  test_markdown_splitter.py  test_utils.py
